[gd_scene load_steps=4 format=2]

[ext_resource path="res://user_interface/MainGameScene.gd" type="Script" id=1]
[ext_resource path="res://user_interface/server/ServerControl.gd" type="Script" id=3]
[ext_resource path="res://user_interface/client/ClientControl.gd" type="Script" id=6]

[node name="MainGameScene" type="Node"]
script = ExtResource( 1 )
isclient = true

[node name="ClientControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 11.0
margin_right = -2.0
margin_bottom = 11.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerControl" type="Control" parent="."]
margin_left = 991.0
margin_top = 8.0
margin_right = 1014.0
margin_bottom = 21.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
